--- a/public/appsHomepage.json
+++ b/public/appsHomepage.json
@@ -1,7 +1,7 @@
 [
   {
     "id": 1,
-    "image": "https://i.ibb.co/3zLkPZp/spotify.png",
+    "image": "https://i.ibb.co.com/6Rrn8TMB/spotify-logo-on-transparent-background-free-vector.jpg",
     "title": "Spotify",
     "companyName": "Spotify AB",
     "description": "Stream music and podcasts from your favorite artists worldwide.",
@@ -19,7 +19,7 @@
   },
   {
     "id": 2,
-    "image": "https://i.ibb.co/YXG1kPZ/netflix.png",
+    "image": "https://i.ibb.co.com/DgM4f0jf/netflix-logo-netflix-icon-free-free-vector.jpg",
     "title": "Netflix",
     "companyName": "Netflix Inc.",
     "description": "Watch TV shows and movies including award-winning Netflix originals.",
@@ -37,7 +37,7 @@
   },
   {
     "id": 3,
-    "image": "https://i.ibb.co/v4cYXkS/instagram.png",
+    "image": "https://i.ibb.co.com/k2J30Xv4/Instagram-Logo-Black-And-White-Vector-1.jpg",
     "title": "Instagram",
     "companyName": "Meta Platforms Inc.",
     "description": "Capture and share your moments, follow friends, and explore trends.",
@@ -55,7 +55,7 @@
   },
   {
     "id": 4,
-    "image": "https://i.ibb.co/ZmYc7sY/whatsapp.png",
+    "image": "https://i.ibb.co.com/PGP6JyRQ/Whats-App-svg.webp",
     "title": "WhatsApp Messenger",
     "companyName": "Meta Platforms Inc.",
     "description": "Fast, simple, and secure messaging and calling for free.",
@@ -73,7 +73,7 @@
   },
   {
     "id": 5,
-    "image": "https://i.ibb.co/BnBShMt/tiktok.png",
+    "image": "https://i.ibb.co.com/r2GMxfMX/8.jpg",
     "title": "TikTok",
     "companyName": "ByteDance Ltd.",
     "description": "Create, watch, and share short-form mobile videos for entertainment.",
@@ -91,7 +91,7 @@
   },
   {
     "id": 6,
-    "image": "https://i.ibb.co/QXtD7cZ/snapchat.png",
+    "image": "https://i.ibb.co.com/Q7NsKrfW/sm-5b321c9cb2d25.jpg",
     "title": "Snapchat",
     "companyName": "Snap Inc.",
     "description": "Share the moment with friends and explore stories around the world.",
@@ -109,7 +109,7 @@
   },
   {
     "id": 7,
-    "image": "https://i.ibb.co/FHnNY2C/zoom.png",
+    "image": "https://i.ibb.co.com/Y4cqCKKD/png-transparent-zoom-app-hd-logo-thumbnail.png",
     "title": "Zoom Cloud Meetings",
     "companyName": "Zoom Video Communications",
     "description": "Connect, collaborate, and meet securely using video conferencing.",
@@ -127,7 +127,7 @@
   },
   {
     "id": 8,
-    "image": "https://i.ibb.co/J5MNrtR/twitter.png",
+    "image": "https://i.ibb.co.com/Fqdhd0NB/Rebranding-Twitter.jpg",
     "title": "X (Twitter)",
     "companyName": "X Corp.",
     "description": "Stay informed with real-time updates and conversations that matter.",
