--- a/public/appsHomepage.json
+++ b/public/appsHomepage.json
@@ -1,146 +1,146 @@
 [
   {
     "id": 1,
-    "image": "https://i.ibb.co.com/6Rrn8TMB/spotify-logo-on-transparent-background-free-vector.jpg",
-    "title": "Spotify",
-    "companyName": "Spotify AB",
-    "description": "Stream music and podcasts from your favorite artists worldwide.",
-    "size": 42,
-    "reviews": 1200000,
-    "ratingAvg": 4.7,
-    "downloads": 500000000,
+    "image": "https://i.ibb.co.com/Kptsm4NT/unnamed-2.webp",
+    "title": "Forest: Focus For Productivity",
+    "companyName": "Seekr Labs",
+    "description": "Stay focused with gamified tree-growing Pomodoro timers that reward your productivity.",
+    "size": 52,
+    "reviews": 18700,
+    "ratingAvg": 4.8,
+    "downloads": "3.5M",
     "ratings": [
-      { "name": "1 star", "count": 20000 },
-      { "name": "2 star", "count": 15000 },
-      { "name": "3 star", "count": 40000 },
-      { "name": "4 star", "count": 120000 },
-      { "name": "5 star", "count": 800000 }
+      { "name": "1 star", "count": 320 },
+      { "name": "2 star", "count": 580 },
+      { "name": "3 star", "count": 1100 },
+      { "name": "4 star", "count": 3700 },
+      { "name": "5 star", "count": 11000 }
     ]
   },
   {
     "id": 2,
-    "image": "https://i.ibb.co.com/DgM4f0jf/netflix-logo-netflix-icon-free-free-vector.jpg",
-    "title": "Netflix",
-    "companyName": "Netflix Inc.",
-    "description": "Watch TV shows and movies including award-winning Netflix originals.",
-    "size": 85,
-    "reviews": 2400000,
-    "ratingAvg": 4.6,
-    "downloads": 1000000000,
+    "image": "https://i.ibb.co.com/vvwLsst3/demo-app-6.webp",
+    "title": "SmPlan: To-Do List With Reminder",
+    "companyName": "HeroSoft Ltd.",
+    "description": "Smart AI-powered task planner and reminder app with voice input and cloud sync.",
+    "size": 44,
+    "reviews": 15300,
+    "ratingAvg": 4.7,
+    "downloads": "4.2M",
     "ratings": [
-      { "name": "1 star", "count": 50000 },
-      { "name": "2 star", "count": 40000 },
-      { "name": "3 star", "count": 70000 },
-      { "name": "4 star", "count": 200000 },
-      { "name": "5 star", "count": 1500000 }
+      { "name": "1 star", "count": 410 },
+      { "name": "2 star", "count": 600 },
+      { "name": "3 star", "count": 1500 },
+      { "name": "4 star", "count": 4200 },
+      { "name": "5 star", "count": 8700 }
     ]
   },
   {
     "id": 3,
-    "image": "https://i.ibb.co.com/k2J30Xv4/Instagram-Logo-Black-And-White-Vector-1.jpg",
-    "title": "Instagram",
-    "companyName": "Meta Platforms Inc.",
-    "description": "Capture and share your moments, follow friends, and explore trends.",
-    "size": 58,
-    "reviews": 3100000,
-    "ratingAvg": 4.4,
-    "downloads": 5000000000,
+    "image": "https://i.ibb.co.com/27Pbhn93/unnamed-1.webp",
+    "title": "FLIP – Focus Timer For Study",
+    "companyName": "Rookie Developer Studio",
+    "description": "Track study time with smart statistics and AI insights to improve focus habits.",
+    "size": 61,
+    "reviews": 9800,
+    "ratingAvg": 4.6,
+    "downloads": "5M",
     "ratings": [
-      { "name": "1 star", "count": 80000 },
-      { "name": "2 star", "count": 50000 },
-      { "name": "3 star", "count": 100000 },
-      { "name": "4 star", "count": 300000 },
-      { "name": "5 star", "count": 2500000 }
+      { "name": "1 star", "count": 290 },
+      { "name": "2 star", "count": 450 },
+      { "name": "3 star", "count": 1000 },
+      { "name": "4 star", "count": 3500 },
+      { "name": "5 star", "count": 4560 }
     ]
   },
   {
     "id": 4,
-    "image": "https://i.ibb.co.com/PGP6JyRQ/Whats-App-svg.webp",
-    "title": "WhatsApp Messenger",
-    "companyName": "Meta Platforms Inc.",
-    "description": "Fast, simple, and secure messaging and calling for free.",
-    "size": 40,
-    "reviews": 2100000,
-    "ratingAvg": 4.8,
-    "downloads": 5000000000,
+    "image": "https://i.ibb.co.com/jPV7sL8p/demo-app-3.webp",
+    "title": "Pomocat – Cute Pomodoro Timer",
+    "companyName": "Kawaii Devs",
+    "description": "Focus timer with adorable animated cats that encourage productive study sessions.",
+    "size": 49,
+    "reviews": 12300,
+    "ratingAvg": 4.9,
+    "downloads": "3.5M",
     "ratings": [
-      { "name": "1 star", "count": 10000 },
-      { "name": "2 star", "count": 20000 },
-      { "name": "3 star", "count": 50000 },
-      { "name": "4 star", "count": 250000 },
-      { "name": "5 star", "count": 1800000 }
+      { "name": "1 star", "count": 150 },
+      { "name": "2 star", "count": 280 },
+      { "name": "3 star", "count": 900 },
+      { "name": "4 star", "count": 2400 },
+      { "name": "5 star", "count": 8570 }
     ]
   },
   {
     "id": 5,
-    "image": "https://i.ibb.co.com/r2GMxfMX/8.jpg",
-    "title": "TikTok",
-    "companyName": "ByteDance Ltd.",
-    "description": "Create, watch, and share short-form mobile videos for entertainment.",
-    "size": 95,
-    "reviews": 2800000,
+    "image": "https://i.ibb.co.com/HDTqjPh2/unnamed.webp",
+    "title": "Time Planner: Schedule & Tasks",
+    "companyName": "NextGen Apps",
+    "description": "Visual planner with AI suggestions for time blocking and goal tracking.",
+    "size": 56,
+    "reviews": 10200,
     "ratingAvg": 4.5,
-    "downloads": 3000000000,
+    "downloads": "5M",
     "ratings": [
-      { "name": "1 star", "count": 150000 },
-      { "name": "2 star", "count": 90000 },
-      { "name": "3 star", "count": 180000 },
-      { "name": "4 star", "count": 400000 },
-      { "name": "5 star", "count": 1900000 }
+      { "name": "1 star", "count": 340 },
+      { "name": "2 star", "count": 500 },
+      { "name": "3 star", "count": 1200 },
+      { "name": "4 star", "count": 3300 },
+      { "name": "5 star", "count": 4860 }
     ]
   },
   {
     "id": 6,
-    "image": "https://i.ibb.co.com/Q7NsKrfW/sm-5b321c9cb2d25.jpg",
-    "title": "Snapchat",
-    "companyName": "Snap Inc.",
-    "description": "Share the moment with friends and explore stories around the world.",
-    "size": 72,
-    "reviews": 950000,
-    "ratingAvg": 4.3,
-    "downloads": 1000000000,
+    "image": "https://i.ibb.co.com/Q73zW4g4/demo-app-5.webp",
+    "title": "Morning Habits – Daily Routine",
+    "companyName": "Hero Productivity",
+    "description": "Build morning habits using AI-driven motivation tracking and reminders.",
+    "size": 62,
+    "reviews": 9400,
+    "ratingAvg": 4.6,
+    "downloads": "3.5M",
     "ratings": [
-      { "name": "1 star", "count": 40000 },
-      { "name": "2 star", "count": 30000 },
-      { "name": "3 star", "count": 60000 },
-      { "name": "4 star", "count": 250000 },
-      { "name": "5 star", "count": 600000 }
+      { "name": "1 star", "count": 200 },
+      { "name": "2 star", "count": 360 },
+      { "name": "3 star", "count": 900 },
+      { "name": "4 star", "count": 3100 },
+      { "name": "5 star", "count": 4840 }
     ]
   },
   {
     "id": 7,
-    "image": "https://i.ibb.co.com/Y4cqCKKD/png-transparent-zoom-app-hd-logo-thumbnail.png",
-    "title": "Zoom Cloud Meetings",
-    "companyName": "Zoom Video Communications",
-    "description": "Connect, collaborate, and meet securely using video conferencing.",
-    "size": 65,
-    "reviews": 1100000,
-    "ratingAvg": 4.2,
-    "downloads": 1000000000,
+    "image": "https://i.ibb.co.com/ZprXGjPt/demo-app-2.webp",
+    "title": "Focus Plant: Pomodoro Forest",
+    "companyName": "Shikudo Studio",
+    "description": "Gamified focus timer where your trees grow as you stay productive.",
+    "size": 70,
+    "reviews": 21000,
+    "ratingAvg": 4.8,
+    "downloads": "5.5M",
     "ratings": [
-      { "name": "1 star", "count": 80000 },
-      { "name": "2 star", "count": 50000 },
-      { "name": "3 star", "count": 120000 },
-      { "name": "4 star", "count": 300000 },
-      { "name": "5 star", "count": 650000 }
+      { "name": "1 star", "count": 420 },
+      { "name": "2 star", "count": 640 },
+      { "name": "3 star", "count": 1200 },
+      { "name": "4 star", "count": 4200 },
+      { "name": "5 star", "count": 15540 }
     ]
   },
   {
     "id": 8,
-    "image": "https://i.ibb.co.com/Fqdhd0NB/Rebranding-Twitter.jpg",
-    "title": "X (Twitter)",
-    "companyName": "X Corp.",
-    "description": "Stay informed with real-time updates and conversations that matter.",
-    "size": 60,
-    "reviews": 1700000,
-    "ratingAvg": 4.1,
-    "downloads": 2000000000,
+    "image": "https://i.ibb.co.com/BHc9bKzH/unnamed.png",
+    "title": "Alarmy – Alarm Clock & Sleep",
+    "companyName": "Delight Room",
+    "description": "Smart alarm app that makes waking up fun with missions and AI sleep tracking.",
+    "size": 69,
+    "reviews": 26500,
+    "ratingAvg": 4.7,
+    "downloads": "4.4M",
     "ratings": [
-      { "name": "1 star", "count": 120000 },
-      { "name": "2 star", "count": 80000 },
-      { "name": "3 star", "count": 140000 },
-      { "name": "4 star", "count": 250000 },
-      { "name": "5 star", "count": 900000 }
+      { "name": "1 star", "count": 700 },
+      { "name": "2 star", "count": 800 },
+      { "name": "3 star", "count": 1400 },
+      { "name": "4 star", "count": 4900 },
+      { "name": "5 star", "count": 18700 }
     ]
   }
 ]
