--- a/public/allappsdata.json
+++ b/public/allappsdata.json
@@ -145,7 +145,7 @@
   },
   {
     "id": 9,
-    "image": "https://i.ibb.co.com/jJwL9W9/study-buddy.webp",
+    "image": "https://i.ibb.co.com/CKcWk8Q2/unnamed-4.webp",
     "title": "StudyBuddy – AI Focus Partner",
     "companyName": "EduSmart",
     "description": "AI-powered study partner that tracks sessions and suggests break schedules.",
@@ -163,7 +163,7 @@
   },
   {
     "id": 10,
-    "image": "https://i.ibb.co.com/MkHtK4y/productive-bee.webp",
+    "image": "https://i.ibb.co.com/7MDfm6b/unnamed-5.webp",
     "title": "ProductiveBee – Habit Builder",
     "companyName": "Focus Hive",
     "description": "Gamified habit tracker with streak rewards and AI habit suggestions.",
@@ -181,7 +181,7 @@
   },
   {
     "id": 11,
-    "image": "https://i.ibb.co.com/nkTRvD7/time-track.webp",
+    "image": "https://i.ibb.co.com/Y4LCYMBN/rounded-icon-1024-180x180.webp",
     "title": "TimeTrack Pro",
     "companyName": "DevCore Studio",
     "description": "Detailed time tracking app for freelancers and students with analytics.",
@@ -199,7 +199,7 @@
   },
   {
     "id": 12,
-    "image": "https://i.ibb.co.com/Dtq6GYt/mind-focus.webp",
+    "image": "https://i.ibb.co.com/JjHpwdww/How-to-meditate-for-better-concentration.jpg",
     "title": "MindFocus – Concentration Aid",
     "companyName": "CalmTech",
     "description": "Ambient sound and breathing-based focus timer for calm productivity.",
@@ -217,7 +217,7 @@
   },
   {
     "id": 13,
-    "image": "https://i.ibb.co.com/ZxXMPpY/focusmate.webp",
+    "image": "https://i.ibb.co.com/hxXsNgKY/images-1.png",
     "title": "FocusMate – Work Together",
     "companyName": "FocusTech Global",
     "description": "Virtual coworking app where you focus alongside real people via video.",
@@ -235,7 +235,7 @@
   },
   {
     "id": 14,
-    "image": "https://i.ibb.co.com/9txZmwc/focus-sound.webp",
+    "image": "https://i.ibb.co.com/xKHFvJTD/maxresdefault.jpg",
     "title": "FocusSound – LoFi Beats",
     "companyName": "TuneTech",
     "description": "LoFi and ambient sound player designed to improve focus and relaxation.",
@@ -253,7 +253,7 @@
   },
   {
     "id": 15,
-    "image": "https://i.ibb.co.com/kMcPjGM/focustask.webp",
+    "image": "https://i.ibb.co.com/SXGTFXyJ/unnamed-6.webp",
     "title": "FocusTask – Smart Scheduler",
     "companyName": "CodeNest",
     "description": "AI-powered schedule optimizer that learns your habits and adjusts plans.",
@@ -271,7 +271,7 @@
   },
   {
     "id": 16,
-    "image": "https://i.ibb.co.com/vXLZyZs/focus-tracker.webp",
+    "image": "https://i.ibb.co.com/Y7S9Fp25/unnamed-7.webp",
     "title": "FocusTracker – Deep Work Timer",
     "companyName": "MindLabs",
     "description": "Minimal deep work tracker with productivity graphs and weekly goals.",
@@ -289,7 +289,7 @@
   },
   {
     "id": 17,
-    "image": "https://i.ibb.co.com/xYmfwx2/protime.webp",
+    "image": "https://i.ibb.co.com/d4YTbXyX/unnamed-8.webp",
     "title": "ProTime – Productivity Clock",
     "companyName": "NeoTech Labs",
     "description": "Track your productive hours with smart analytics and AI-based trends.",
@@ -307,7 +307,7 @@
   },
   {
     "id": 18,
-    "image": "https://i.ibb.co.com/Sd2RwC1/studyflow.webp",
+    "image": "https://i.ibb.co.com/B52jWS6M/unnamed-9.webp",
     "title": "StudyFlow – Student Planner",
     "companyName": "BrightMind",
     "description": "Student-focused planner app with assignment reminders and progress charts.",
@@ -325,7 +325,7 @@
   },
   {
     "id": 19,
-    "image": "https://i.ibb.co.com/yk2hsbw/pomohero.webp",
+    "image": "https://i.ibb.co.com/Zpt5PLF4/images-1.jpg",
     "title": "PomoHero – Work Battle",
     "companyName": "TaskArena",
     "description": "Challenge friends in real-time Pomodoro battles to stay motivated.",
@@ -343,7 +343,7 @@
   },
   {
     "id": 20,
-    "image": "https://i.ibb.co.com/Tc3Q9yB/focushero.webp",
+    "image": "https://i.ibb.co.com/5hvWPwLP/unnamed-10.webp",
     "title": "FocusHero – AI Coach",
     "companyName": "SmartCore AI",
     "description": "AI coach that monitors your screen time and gives motivational nudges.",
