--- a/public/allappsdata.json
+++ b/public/allappsdata.json
@@ -5,7 +5,7 @@
     "title": "Forest: Focus For Productivity",
     "companyName": "Seekr Labs",
     "description": "Stay focused with gamified tree-growing Pomodoro timers that reward your productivity.",
-    "size": 52,
+    "size": "252MB",
     "reviews": 18700,
     "ratingAvg": 4.8,
     "downloads": "3.5M",
@@ -23,7 +23,7 @@
     "title": "SmPlan: To-Do List With Reminder",
     "companyName": "HeroSoft Ltd.",
     "description": "Smart AI-powered task planner and reminder app with voice input and cloud sync.",
-    "size": 44,
+    "size": "256MB",
     "reviews": 15300,
     "ratingAvg": 4.7,
     "downloads": "4.2M",
@@ -41,7 +41,7 @@
     "title": "FLIP – Focus Timer For Study",
     "companyName": "Rookie Developer Studio",
     "description": "Track study time with smart statistics and AI insights to improve focus habits.",
-    "size": 61,
+    "size": "90MB",
     "reviews": 9800,
     "ratingAvg": 4.6,
     "downloads": "5M",
@@ -59,7 +59,7 @@
     "title": "Pomocat – Cute Pomodoro Timer",
     "companyName": "Kawaii Devs",
     "description": "Focus timer with adorable animated cats that encourage productive study sessions.",
-    "size": 49,
+    "size": "67MB",
     "reviews": 12300,
     "ratingAvg": 4.9,
     "downloads": "3.5M",
@@ -77,7 +77,7 @@
     "title": "Time Planner: Schedule & Tasks",
     "companyName": "NextGen Apps",
     "description": "Visual planner with AI suggestions for time blocking and goal tracking.",
-    "size": 56,
+    "size": "56MB",
     "reviews": 10200,
     "ratingAvg": 4.5,
     "downloads": "5M",
@@ -95,7 +95,7 @@
     "title": "Morning Habits – Daily Routine",
     "companyName": "Hero Productivity",
     "description": "Build morning habits using AI-driven motivation tracking and reminders.",
-    "size": 62,
+    "size": "110MB",
     "reviews": 9400,
     "ratingAvg": 4.6,
     "downloads": "3.5M",
@@ -113,7 +113,7 @@
     "title": "Focus Plant: Pomodoro Forest",
     "companyName": "Shikudo Studio",
     "description": "Gamified focus timer where your trees grow as you stay productive.",
-    "size": 70,
+    "size": "289MB",
     "reviews": 21000,
     "ratingAvg": 4.8,
     "downloads": "5.5M",
@@ -131,7 +131,7 @@
     "title": "Alarmy – Alarm Clock & Sleep",
     "companyName": "Delight Room",
     "description": "Smart alarm app that makes waking up fun with missions and AI sleep tracking.",
-    "size": 69,
+    "size": "265MB",
     "reviews": 26500,
     "ratingAvg": 4.7,
     "downloads": "4.4M",
@@ -149,7 +149,7 @@
     "title": "StudyBuddy – AI Focus Partner",
     "companyName": "EduSmart",
     "description": "AI-powered study partner that tracks sessions and suggests break schedules.",
-    "size": 58,
+    "size": "119MB",
     "reviews": 8700,
     "ratingAvg": 4.6,
     "downloads": "2.8M",
@@ -167,7 +167,7 @@
     "title": "ProductiveBee – Habit Builder",
     "companyName": "Focus Hive",
     "description": "Gamified habit tracker with streak rewards and AI habit suggestions.",
-    "size": 54,
+    "size": "200MB",
     "reviews": 12200,
     "ratingAvg": 4.8,
     "downloads": "3.3M",
@@ -185,7 +185,7 @@
     "title": "TimeTrack Pro",
     "companyName": "DevCore Studio",
     "description": "Detailed time tracking app for freelancers and students with analytics.",
-    "size": 63,
+    "size": "280MB",
     "reviews": 15000,
     "ratingAvg": 4.7,
     "downloads": "6M",
@@ -221,7 +221,7 @@
     "title": "FocusMate – Work Together",
     "companyName": "FocusTech Global",
     "description": "Virtual coworking app where you focus alongside real people via video.",
-    "size": 60,
+    "size": "250Mb",
     "reviews": 9100,
     "ratingAvg": 4.6,
     "downloads": "3.8M",
@@ -239,7 +239,7 @@
     "title": "FocusSound – LoFi Beats",
     "companyName": "TuneTech",
     "description": "LoFi and ambient sound player designed to improve focus and relaxation.",
-    "size": 45,
+    "size": "240MB",
     "reviews": 10200,
     "ratingAvg": 4.9,
     "downloads": "4.6M",
@@ -257,7 +257,7 @@
     "title": "FocusTask – Smart Scheduler",
     "companyName": "CodeNest",
     "description": "AI-powered schedule optimizer that learns your habits and adjusts plans.",
-    "size": 59,
+    "size": "256MB",
     "reviews": 11000,
     "ratingAvg": 4.8,
     "downloads": "4.1M",
@@ -275,7 +275,7 @@
     "title": "FocusTracker – Deep Work Timer",
     "companyName": "MindLabs",
     "description": "Minimal deep work tracker with productivity graphs and weekly goals.",
-    "size": 53,
+    "size": "254MB",
     "reviews": 9700,
     "ratingAvg": 4.7,
     "downloads": "3.6M",
@@ -293,7 +293,7 @@
     "title": "ProTime – Productivity Clock",
     "companyName": "NeoTech Labs",
     "description": "Track your productive hours with smart analytics and AI-based trends.",
-    "size": 65,
+    "size": "114MB",
     "reviews": 8900,
     "ratingAvg": 4.6,
     "downloads": "3.2M",
@@ -311,7 +311,7 @@
     "title": "StudyFlow – Student Planner",
     "companyName": "BrightMind",
     "description": "Student-focused planner app with assignment reminders and progress charts.",
-    "size": 50,
+    "size": "67MB",
     "reviews": 7800,
     "ratingAvg": 4.5,
     "downloads": "2.9M",
@@ -329,7 +329,7 @@
     "title": "PomoHero – Work Battle",
     "companyName": "TaskArena",
     "description": "Challenge friends in real-time Pomodoro battles to stay motivated.",
-    "size": 66,
+    "size": "124MB",
     "reviews": 14200,
     "ratingAvg": 4.8,
     "downloads": "4.9M",
@@ -347,7 +347,7 @@
     "title": "FocusHero – AI Coach",
     "companyName": "SmartCore AI",
     "description": "AI coach that monitors your screen time and gives motivational nudges.",
-    "size": 64,
+    "size": "64MB",
     "reviews": 13400,
     "ratingAvg": 4.7,
     "downloads": "4.5M",
