--- a/public/allappsdata.json
+++ b/public/allappsdata.json
@@ -10,11 +10,11 @@
     "ratingAvg": 4.8,
     "downloads": "3.5M",
     "ratings": [
-      { "name": "1 star", "count": 320 },
-      { "name": "2 star", "count": 580 },
-      { "name": "3 star", "count": 1100 },
-      { "name": "4 star", "count": 3700 },
-      { "name": "5 star", "count": 11000 }
+      { "name": "1⭐ ", "count": 320 },
+      { "name": "2⭐", "count": 580 },
+      { "name": "3⭐", "count": 1100 },
+      { "name": "4⭐", "count": 3700 },
+      { "name": "5⭐", "count": 11000 }
     ]
   },
   {
@@ -28,11 +28,11 @@
     "ratingAvg": 4.7,
     "downloads": "4.2M",
     "ratings": [
-      { "name": "1 star", "count": 410 },
-      { "name": "2 star", "count": 600 },
-      { "name": "3 star", "count": 1500 },
-      { "name": "4 star", "count": 4200 },
-      { "name": "5 star", "count": 8700 }
+      { "name": "1⭐", "count": 410 },
+      { "name": "2⭐", "count": 600 },
+      { "name": "3⭐", "count": 1500 },
+      { "name": "4⭐", "count": 4200 },
+      { "name": "5⭐", "count": 8700 }
     ]
   },
   {
@@ -46,11 +46,11 @@
     "ratingAvg": 4.6,
     "downloads": "5M",
     "ratings": [
-      { "name": "1 star", "count": 290 },
-      { "name": "2 star", "count": 450 },
-      { "name": "3 star", "count": 1000 },
-      { "name": "4 star", "count": 3500 },
-      { "name": "5 star", "count": 4560 }
+      { "name": "1⭐", "count": 290 },
+      { "name": "2⭐", "count": 450 },
+      { "name": "3⭐", "count": 1000 },
+      { "name": "4⭐", "count": 3500 },
+      { "name": "5⭐", "count": 4560 }
     ]
   },
   {
@@ -64,11 +64,11 @@
     "ratingAvg": 4.9,
     "downloads": "3.5M",
     "ratings": [
-      { "name": "1 star", "count": 150 },
-      { "name": "2 star", "count": 280 },
-      { "name": "3 star", "count": 900 },
-      { "name": "4 star", "count": 2400 },
-      { "name": "5 star", "count": 8570 }
+      { "name": "1⭐", "count": 150 },
+      { "name": "2⭐", "count": 280 },
+      { "name": "3⭐", "count": 900 },
+      { "name": "4⭐", "count": 2400 },
+      { "name": "5⭐", "count": 8570 }
     ]
   },
   {
@@ -82,11 +82,11 @@
     "ratingAvg": 4.5,
     "downloads": "5M",
     "ratings": [
-      { "name": "1 star", "count": 340 },
-      { "name": "2 star", "count": 500 },
-      { "name": "3 star", "count": 1200 },
-      { "name": "4 star", "count": 3300 },
-      { "name": "5 star", "count": 4860 }
+      { "name": "1 ⭐", "count": 340 },
+      { "name": "2 ⭐", "count": 500 },
+      { "name": "3 ⭐", "count": 1200 },
+      { "name": "4 ⭐", "count": 3300 },
+      { "name": "5 ⭐", "count": 4860 }
     ]
   },
   {
@@ -100,11 +100,11 @@
     "ratingAvg": 4.6,
     "downloads": "3.5M",
     "ratings": [
-      { "name": "1 star", "count": 200 },
-      { "name": "2 star", "count": 360 },
-      { "name": "3 star", "count": 900 },
-      { "name": "4 star", "count": 3100 },
-      { "name": "5 star", "count": 4840 }
+      { "name": "1⭐", "count": 200 },
+      { "name": "2⭐", "count": 360 },
+      { "name": "3⭐", "count": 900 },
+      { "name": "4⭐", "count": 3100 },
+      { "name": "5⭐", "count": 4840 }
     ]
   },
   {
@@ -118,11 +118,11 @@
     "ratingAvg": 4.8,
     "downloads": "5.5M",
     "ratings": [
-      { "name": "1 star", "count": 420 },
-      { "name": "2 star", "count": 640 },
-      { "name": "3 star", "count": 1200 },
-      { "name": "4 star", "count": 4200 },
-      { "name": "5 star", "count": 15540 }
+      { "name": "1 ⭐", "count": 420 },
+      { "name": "2 ⭐", "count": 640 },
+      { "name": "3 ⭐", "count": 1200 },
+      { "name": "4 ⭐", "count": 4200 },
+      { "name": "5 ⭐", "count": 15540 }
     ]
   },
   {
@@ -136,11 +136,11 @@
     "ratingAvg": 4.7,
     "downloads": "4.4M",
     "ratings": [
-      { "name": "1 star", "count": 700 },
-      { "name": "2 star", "count": 800 },
-      { "name": "3 star", "count": 1400 },
-      { "name": "4 star", "count": 4900 },
-      { "name": "5 star", "count": 18700 }
+      { "name": "1 ⭐", "count": 700 },
+      { "name": "2 ⭐", "count": 800 },
+      { "name": "3 ⭐", "count": 1400 },
+      { "name": "4 ⭐", "count": 4900 },
+      { "name": "5 ⭐", "count": 18700 }
     ]
   },
   {
@@ -154,11 +154,11 @@
     "ratingAvg": 4.6,
     "downloads": "2.8M",
     "ratings": [
-      { "name": "1 star", "count": 210 },
-      { "name": "2 star", "count": 300 },
-      { "name": "3 star", "count": 850 },
-      { "name": "4 star", "count": 2900 },
-      { "name": "5 star", "count": 4440 }
+      { "name": "1 ⭐", "count": 210 },
+      { "name": "2 ⭐", "count": 300 },
+      { "name": "3 ⭐", "count": 850 },
+      { "name": "4 ⭐", "count": 2900 },
+      { "name": "5 ⭐", "count": 4440 }
     ]
   },
   {
@@ -172,11 +172,11 @@
     "ratingAvg": 4.8,
     "downloads": "3.3M",
     "ratings": [
-      { "name": "1 star", "count": 280 },
-      { "name": "2 star", "count": 400 },
-      { "name": "3 star", "count": 900 },
-      { "name": "4 star", "count": 3200 },
-      { "name": "5 star", "count": 7420 }
+      { "name": "1 ⭐", "count": 280 },
+      { "name": "2 ⭐", "count": 400 },
+      { "name": "3 ⭐", "count": 900 },
+      { "name": "4 ⭐", "count": 3200 },
+      { "name": "5 ⭐", "count": 7420 }
     ]
   },
   {
@@ -190,11 +190,11 @@
     "ratingAvg": 4.7,
     "downloads": "6M",
     "ratings": [
-      { "name": "1 star", "count": 360 },
-      { "name": "2 star", "count": 540 },
-      { "name": "3 star", "count": 1300 },
-      { "name": "4 star", "count": 4300 },
-      { "name": "5 star", "count": 8500 }
+      { "name": "1 ⭐", "count": 360 },
+      { "name": "2 ⭐", "count": 540 },
+      { "name": "3 ⭐", "count": 1300 },
+      { "name": "4 ⭐", "count": 4300 },
+      { "name": "5 ⭐", "count": 8500 }
     ]
   },
   {
@@ -208,11 +208,11 @@
     "ratingAvg": 4.5,
     "downloads": "2.5M",
     "ratings": [
-      { "name": "1 star", "count": 220 },
-      { "name": "2 star", "count": 310 },
-      { "name": "3 star", "count": 700 },
-      { "name": "4 star", "count": 2800 },
-      { "name": "5 star", "count": 4270 }
+      { "name": "1 ⭐", "count": 220 },
+      { "name": "2 ⭐", "count": 310 },
+      { "name": "3 ⭐", "count": 700 },
+      { "name": "4 ⭐", "count": 2800 },
+      { "name": "5 ⭐", "count": 4270 }
     ]
   },
   {
@@ -226,11 +226,11 @@
     "ratingAvg": 4.6,
     "downloads": "3.8M",
     "ratings": [
-      { "name": "1 star", "count": 260 },
-      { "name": "2 star", "count": 370 },
-      { "name": "3 star", "count": 900 },
-      { "name": "4 star", "count": 3300 },
-      { "name": "5 star", "count": 4270 }
+      { "name": "1 ⭐", "count": 260 },
+      { "name": "2 ⭐", "count": 370 },
+      { "name": "3 ⭐", "count": 900 },
+      { "name": "4 ⭐", "count": 3300 },
+      { "name": "5 ⭐", "count": 4270 }
     ]
   },
   {
@@ -244,11 +244,11 @@
     "ratingAvg": 4.9,
     "downloads": "4.6M",
     "ratings": [
-      { "name": "1 star", "count": 140 },
-      { "name": "2 star", "count": 200 },
-      { "name": "3 star", "count": 600 },
-      { "name": "4 star", "count": 2900 },
-      { "name": "5 star", "count": 8360 }
+      { "name": "1 ⭐", "count": 140 },
+      { "name": "2 ⭐", "count": 200 },
+      { "name": "3 ⭐", "count": 600 },
+      { "name": "4 ⭐", "count": 2900 },
+      { "name": "5 ⭐", "count": 8360 }
     ]
   },
   {
@@ -262,11 +262,11 @@
     "ratingAvg": 4.8,
     "downloads": "4.1M",
     "ratings": [
-      { "name": "1 star", "count": 270 },
-      { "name": "2 star", "count": 420 },
-      { "name": "3 star", "count": 1000 },
-      { "name": "4 star", "count": 3100 },
-      { "name": "5 star", "count": 7210 }
+      { "name": "1 ⭐", "count": 270 },
+      { "name": "2 ⭐", "count": 420 },
+      { "name": "3 ⭐", "count": 1000 },
+      { "name": "4 ⭐", "count": 3100 },
+      { "name": "5 ⭐", "count": 7210 }
     ]
   },
   {
@@ -280,11 +280,11 @@
     "ratingAvg": 4.7,
     "downloads": "3.6M",
     "ratings": [
-      { "name": "1 star", "count": 200 },
-      { "name": "2 star", "count": 330 },
-      { "name": "3 star", "count": 850 },
-      { "name": "4 star", "count": 3000 },
-      { "name": "5 star", "count": 5320 }
+      { "name": "1 ⭐", "count": 200 },
+      { "name": "2 ⭐", "count": 330 },
+      { "name": "3 ⭐", "count": 850 },
+      { "name": "4 ⭐", "count": 3000 },
+      { "name": "5 ⭐", "count": 5320 }
     ]
   },
   {
@@ -298,11 +298,11 @@
     "ratingAvg": 4.6,
     "downloads": "3.2M",
     "ratings": [
-      { "name": "1 star", "count": 230 },
-      { "name": "2 star", "count": 360 },
-      { "name": "3 star", "count": 850 },
-      { "name": "4 star", "count": 2900 },
-      { "name": "5 star", "count": 4560 }
+      { "name": "1 ⭐", "count": 230 },
+      { "name": "2 ⭐", "count": 360 },
+      { "name": "3 ⭐", "count": 850 },
+      { "name": "4 ⭐", "count": 2900 },
+      { "name": "5 ⭐", "count": 4560 }
     ]
   },
   {
@@ -316,11 +316,11 @@
     "ratingAvg": 4.5,
     "downloads": "2.9M",
     "ratings": [
-      { "name": "1 star", "count": 190 },
-      { "name": "2 star", "count": 270 },
-      { "name": "3 star", "count": 780 },
-      { "name": "4 star", "count": 2500 },
-      { "name": "5 star", "count": 4060 }
+      { "name": "1 ⭐", "count": 190 },
+      { "name": "2 ⭐", "count": 270 },
+      { "name": "3 ⭐", "count": 780 },
+      { "name": "4 ⭐", "count": 2500 },
+      { "name": "5 ⭐", "count": 4060 }
     ]
   },
   {
@@ -334,11 +334,11 @@
     "ratingAvg": 4.8,
     "downloads": "4.9M",
     "ratings": [
-      { "name": "1 star", "count": 320 },
-      { "name": "2 star", "count": 430 },
-      { "name": "3 star", "count": 950 },
-      { "name": "4 star", "count": 3400 },
-      { "name": "5 star", "count": 9100 }
+      { "name": "1 ⭐", "count": 320 },
+      { "name": "2 ⭐", "count": 430 },
+      { "name": "3 ⭐", "count": 950 },
+      { "name": "4 ⭐", "count": 3400 },
+      { "name": "5 ⭐", "count": 9100 }
     ]
   },
   {
@@ -352,11 +352,11 @@
     "ratingAvg": 4.7,
     "downloads": "4.5M",
     "ratings": [
-      { "name": "1 star", "count": 310 },
-      { "name": "2 star", "count": 480 },
-      { "name": "3 star", "count": 1000 },
-      { "name": "4 star", "count": 3300 },
-      { "name": "5 star", "count": 8310 }
+      { "name": "1 ⭐", "count": 310 },
+      { "name": "2 ⭐", "count": 480 },
+      { "name": "3 ⭐", "count": 1000 },
+      { "name": "4 ⭐", "count": 3300 },
+      { "name": "5 ⭐", "count": 8310 }
     ]
   }
 ]
