--- a/public/allappsdata.json
+++ b/public/allappsdata.json
@@ -4,7 +4,7 @@
     "image": "https://i.ibb.co.com/Kptsm4NT/unnamed-2.webp",
     "title": "Forest: Focus For Productivity",
     "companyName": "Seekr Labs",
-    "description": "Stay focused with gamified tree-growing Pomodoro timers that reward your productivity.",
+    "description": "Forest is a unique productivity app that helps you stay focused by growing virtual trees. Whenever you start a focus session, a tree begins to grow. But if you leave the app or use your phone, the tree withers. This fun gamified system motivates users to stay on task. You can track your progress, view focus reports, and use the Pomodoro technique to manage time effectively. The symbolic act of planting trees connects your digital focus to real-life growth. Forest keeps distractions away and boosts your daily productivity in a mindful, enjoyable way.",
     "size": "252MB",
     "reviews": 18700,
     "ratingAvg": 4.8,
@@ -22,7 +22,7 @@
     "image": "https://i.ibb.co.com/vvwLsst3/demo-app-6.webp",
     "title": "SmPlan: To-Do List With Reminder",
     "companyName": "HeroSoft Ltd.",
-    "description": "Smart AI-powered task planner and reminder app with voice input and cloud sync.",
+    "description": "SmPlan is a smart task management app designed to organize and track your daily work efficiently. It includes AI-powered reminders and voice input features, making planning effortless. You can create to-do lists, schedule meetings, and set personal goals with timely notifications. The app also syncs data to the cloud, ensuring you never lose your progress. Its clean interface allows you to add new tasks quickly, while smart prioritization helps you focus on what matters most. SmPlan works like your personal productivity assistant, helping you manage time effectively and stay on top of your commitments.",
     "size": "256MB",
     "reviews": 15300,
     "ratingAvg": 4.7,
@@ -40,7 +40,7 @@
     "image": "https://i.ibb.co.com/27Pbhn93/unnamed-1.webp",
     "title": "FLIP – Focus Timer For Study",
     "companyName": "Rookie Developer Studio",
-    "description": "Track study time with smart statistics and AI insights to improve focus habits.",
+    "description": "FLIP is a powerful focus timer app designed especially for students who want to study more efficiently. Using the Pomodoro technique, it breaks time into short sessions to help you work with better concentration and take proper breaks. The app includes smart analytics, progress tracking, and detailed study reports. You can set daily goals and even compare progress with friends for motivation. With its minimal design and gentle notifications, FLIP creates a distraction-free study environment. It’s the perfect companion for learners aiming to stay disciplined, organized, and productive throughout their study sessions.",
     "size": "90MB",
     "reviews": 9800,
     "ratingAvg": 4.6,
@@ -58,7 +58,7 @@
     "image": "https://i.ibb.co.com/jPV7sL8p/demo-app-3.webp",
     "title": "Pomocat – Cute Pomodoro Timer",
     "companyName": "Kawaii Devs",
-    "description": "Focus timer with adorable animated cats that encourage productive study sessions.",
+    "description": "Pomocat is an adorable Pomodoro timer app that rewards your focus with cute animated cats. Every time you complete a focus session, the cat smiles or dances, bringing joy and motivation to your work. It features custom timers, background music, and focus tracking tools. Ideal for students and professionals alike, Pomocat combines fun with productivity. Its soft colors and cartoon-style design make it visually relaxing, helping you concentrate for longer periods. Pomocat creates a perfect balance between work and rest, transforming time management into a delightful and rewarding experience.",
     "size": "67MB",
     "reviews": 12300,
     "ratingAvg": 4.9,
@@ -76,7 +76,7 @@
     "image": "https://i.ibb.co.com/HDTqjPh2/unnamed.webp",
     "title": "Time Planner: Schedule & Tasks",
     "companyName": "NextGen Apps",
-    "description": "Visual planner with AI suggestions for time blocking and goal tracking.",
+    "description": "Time Planner is a beautifully designed scheduling app that helps you manage your time, goals, and daily tasks effectively. With AI-powered suggestions, it recommends ideal time blocks based on your personal routine. The drag-and-drop interface makes organizing events and tasks intuitive and fun. You can create daily, weekly, or monthly plans and track your progress easily. The app offers colorful tags, a dark mode, and customizable reminders to make planning enjoyable. Time Planner transforms your day into a structured, balanced, and highly productive experience for better time management and personal growth.",
     "size": "56MB",
     "reviews": 10200,
     "ratingAvg": 4.5,
@@ -94,7 +94,7 @@
     "image": "https://i.ibb.co.com/Q73zW4g4/demo-app-5.webp",
     "title": "Morning Habits – Daily Routine",
     "companyName": "Hero Productivity",
-    "description": "Build morning habits using AI-driven motivation tracking and reminders.",
+    "description": "Morning Habits helps you build a positive and consistent morning routine to start your day right. The app includes smart reminders, motivational notifications, and detailed progress charts to help you stay consistent with your daily goals. You can track habits like sleep, exercise, meditation, and breakfast time. The AI-powered motivation system encourages discipline and balance in your lifestyle. Its light, modern interface is designed to boost your energy and focus every morning. Morning Habits makes personal growth easier by helping you stay organized, motivated, and mindful from the very start of your day.",
     "size": "110MB",
     "reviews": 9400,
     "ratingAvg": 4.6,
@@ -112,7 +112,7 @@
     "image": "https://i.ibb.co.com/ZprXGjPt/demo-app-2.webp",
     "title": "Focus Plant: Pomodoro Forest",
     "companyName": "Shikudo Studio",
-    "description": "Gamified focus timer where your trees grow as you stay productive.",
+    "description": "Focus Plant is a gamified Pomodoro timer that motivates you to focus by planting and growing virtual trees. The longer you stay focused, the more your digital garden flourishes. After each session, you can unlock new plants, flowers, and upgrades. The app includes soothing background music, beautiful animations, and a built-in Pomodoro counter. Perfect for students, developers, and freelancers, Focus Plant transforms productivity into a relaxing, enjoyable experience. It not only improves focus but also brings a sense of calm and mindfulness, helping you work joyfully without distractions.",
     "size": "289MB",
     "reviews": 21000,
     "ratingAvg": 4.8,
@@ -125,12 +125,14 @@
       { "name": "5 ⭐", "count": 15540 }
     ]
   },
+
+
   {
     "id": 8,
     "image": "https://i.ibb.co.com/BHc9bKzH/unnamed.png",
     "title": "Alarmy – Alarm Clock & Sleep",
     "companyName": "Delight Room",
-    "description": "Smart alarm app that makes waking up fun with missions and AI sleep tracking.",
+    "description": "Smart alarm app that makes waking up fun with missions and AI sleep tracking.SmPlan is a smart task management app designed to organize and track your daily work efficiently. It includes AI-powered reminders and voice input features, making planning effortless. You can create to-do lists, schedule meetings, and set personal goals with timely notifications. The app also syncs data to the cloud, ensuring you never lose your progress. Its clean interface allows you to add new tasks quickly, while smart prioritization helps you focus on what matters most. SmPlan works like your personal productivity assistant, helping you manage time effectively and stay on top of your commitments.",
     "size": "265MB",
     "reviews": 26500,
     "ratingAvg": 4.7,
@@ -166,7 +168,7 @@
     "image": "https://i.ibb.co.com/7MDfm6b/unnamed-5.webp",
     "title": "ProductiveBee – Habit Builder",
     "companyName": "Focus Hive",
-    "description": "Gamified habit tracker with streak rewards and AI habit suggestions.",
+    "description": "Gamified habit tracker with streak rewards and AI habit suggestions.SmPlan is a smart task management app designed to organize and track your daily work efficiently. It includes AI-powered reminders and voice input features, making planning effortless. You can create to-do lists, schedule meetings, and set personal goals with timely notifications. The app also syncs data to the cloud, ensuring you never lose your progress. Its clean interface allows you to add new tasks quickly, while smart prioritization helps you focus on what matters most. SmPlan works like your personal productivity assistant, helping you manage time effectively and stay on top of your commitments.",
     "size": "200MB",
     "reviews": 12200,
     "ratingAvg": 4.8,
@@ -184,7 +186,7 @@
     "image": "https://i.ibb.co.com/Y4LCYMBN/rounded-icon-1024-180x180.webp",
     "title": "TimeTrack Pro",
     "companyName": "DevCore Studio",
-    "description": "Detailed time tracking app for freelancers and students with analytics.",
+    "description": "Detailed time tracking app for freelancers and students with analytics.SmPlan is a smart task management app designed to organize and track your daily work efficiently. It includes AI-powered reminders and voice input features, making planning effortless. You can create to-do lists, schedule meetings, and set personal goals with timely notifications. The app also syncs data to the cloud, ensuring you never lose your progress. Its clean interface allows you to add new tasks quickly, while smart prioritization helps you focus on what matters most. SmPlan works like your personal productivity assistant, helping you manage time effectively and stay on top of your commitments.",
     "size": "280MB",
     "reviews": 15000,
     "ratingAvg": 4.7,
@@ -202,7 +204,7 @@
     "image": "https://i.ibb.co.com/JjHpwdww/How-to-meditate-for-better-concentration.jpg",
     "title": "MindFocus – Concentration Aid",
     "companyName": "CalmTech",
-    "description": "Ambient sound and breathing-based focus timer for calm productivity.",
+    "description": "Ambient sound and breathing-based focus timer for calm productivity.SmPlan is a smart task management app designed to organize and track your daily work efficiently. It includes AI-powered reminders and voice input features, making planning effortless. You can create to-do lists, schedule meetings, and set personal goals with timely notifications. The app also syncs data to the cloud, ensuring you never lose your progress. Its clean interface allows you to add new tasks quickly, while smart prioritization helps you focus on what matters most. SmPlan works like your personal productivity assistant, helping you manage time effectively and stay on top of your commitments.",
     "size": 48,
     "reviews": 8300,
     "ratingAvg": 4.5,
@@ -220,7 +222,7 @@
     "image": "https://i.ibb.co.com/hxXsNgKY/images-1.png",
     "title": "FocusMate – Work Together",
     "companyName": "FocusTech Global",
-    "description": "Virtual coworking app where you focus alongside real people via video.",
+    "description": "Virtual coworking app where you focus alongside real people via video.SmPlan is a smart task management app designed to organize and track your daily work efficiently. It includes AI-powered reminders and voice input features, making planning effortless. You can create to-do lists, schedule meetings, and set personal goals with timely notifications. The app also syncs data to the cloud, ensuring you never lose your progress. Its clean interface allows you to add new tasks quickly, while smart prioritization helps you focus on what matters most. SmPlan works like your personal productivity assistant, helping you manage time effectively and stay on top of your commitments.",
     "size": "250Mb",
     "reviews": 9100,
     "ratingAvg": 4.6,
@@ -238,7 +240,7 @@
     "image": "https://i.ibb.co.com/xKHFvJTD/maxresdefault.jpg",
     "title": "FocusSound – LoFi Beats",
     "companyName": "TuneTech",
-    "description": "LoFi and ambient sound player designed to improve focus and relaxation.",
+    "description": "LoFi and ambient sound player designed to improve focus and relaxation.SmPlan is a smart task management app designed to organize and track your daily work efficiently. It includes AI-powered reminders and voice input features, making planning effortless. You can create to-do lists, schedule meetings, and set personal goals with timely notifications. The app also syncs data to the cloud, ensuring you never lose your progress. Its clean interface allows you to add new tasks quickly, while smart prioritization helps you focus on what matters most. SmPlan works like your personal productivity assistant, helping you manage time effectively and stay on top of your commitments.",
     "size": "240MB",
     "reviews": 10200,
     "ratingAvg": 4.9,
@@ -256,7 +258,7 @@
     "image": "https://i.ibb.co.com/SXGTFXyJ/unnamed-6.webp",
     "title": "FocusTask – Smart Scheduler",
     "companyName": "CodeNest",
-    "description": "AI-powered schedule optimizer that learns your habits and adjusts plans.",
+    "description": "AI-powered schedule optimizer that learns your habits and adjusts plans.SmPlan is a smart task management app designed to organize and track your daily work efficiently. It includes AI-powered reminders and voice input features, making planning effortless. You can create to-do lists, schedule meetings, and set personal goals with timely notifications. The app also syncs data to the cloud, ensuring you never lose your progress. Its clean interface allows you to add new tasks quickly, while smart prioritization helps you focus on what matters most. SmPlan works like your personal productivity assistant, helping you manage time effectively and stay on top of your commitments.",
     "size": "256MB",
     "reviews": 11000,
     "ratingAvg": 4.8,
@@ -274,7 +276,7 @@
     "image": "https://i.ibb.co.com/Y7S9Fp25/unnamed-7.webp",
     "title": "FocusTracker – Deep Work Timer",
     "companyName": "MindLabs",
-    "description": "Minimal deep work tracker with productivity graphs and weekly goals.",
+    "description": "Minimal deep work tracker with productivity graphs and weekly goals.SmPlan is a smart task management app designed to organize and track your daily work efficiently. It includes AI-powered reminders and voice input features, making planning effortless. You can create to-do lists, schedule meetings, and set personal goals with timely notifications. The app also syncs data to the cloud, ensuring you never lose your progress. Its clean interface allows you to add new tasks quickly, while smart prioritization helps you focus on what matters most. SmPlan works like your personal productivity assistant, helping you manage time effectively and stay on top of your commitments.",
     "size": "254MB",
     "reviews": 9700,
     "ratingAvg": 4.7,
@@ -292,7 +294,7 @@
     "image": "https://i.ibb.co.com/d4YTbXyX/unnamed-8.webp",
     "title": "ProTime – Productivity Clock",
     "companyName": "NeoTech Labs",
-    "description": "Track your productive hours with smart analytics and AI-based trends.",
+    "description": "Track your productive hours with smart analytics and AI-based trends.SmPlan is a smart task management app designed to organize and track your daily work efficiently. It includes AI-powered reminders and voice input features, making planning effortless. You can create to-do lists, schedule meetings, and set personal goals with timely notifications. The app also syncs data to the cloud, ensuring you never lose your progress. Its clean interface allows you to add new tasks quickly, while smart prioritization helps you focus on what matters most. SmPlan works like your personal productivity assistant, helping you manage time effectively and stay on top of your commitments.",
     "size": "114MB",
     "reviews": 8900,
     "ratingAvg": 4.6,
@@ -310,7 +312,7 @@
     "image": "https://i.ibb.co.com/B52jWS6M/unnamed-9.webp",
     "title": "StudyFlow – Student Planner",
     "companyName": "BrightMind",
-    "description": "Student-focused planner app with assignment reminders and progress charts.",
+    "description": "Student-focused planner app with assignment reminders and progress charts.SmPlan is a smart task management app designed to organize and track your daily work efficiently. It includes AI-powered reminders and voice input features, making planning effortless. You can create to-do lists, schedule meetings, and set personal goals with timely notifications. The app also syncs data to the cloud, ensuring you never lose your progress. Its clean interface allows you to add new tasks quickly, while smart prioritization helps you focus on what matters most. SmPlan works like your personal productivity assistant, helping you manage time effectively and stay on top of your commitments.",
     "size": "67MB",
     "reviews": 7800,
     "ratingAvg": 4.5,
@@ -328,7 +330,7 @@
     "image": "https://i.ibb.co.com/Zpt5PLF4/images-1.jpg",
     "title": "PomoHero – Work Battle",
     "companyName": "TaskArena",
-    "description": "Challenge friends in real-time Pomodoro battles to stay motivated.",
+    "description": "Challenge friends in real-time Pomodoro battles to stay motivated.SmPlan is a smart task management app designed to organize and track your daily work efficiently. It includes AI-powered reminders and voice input features, making planning effortless. You can create to-do lists, schedule meetings, and set personal goals with timely notifications. The app also syncs data to the cloud, ensuring you never lose your progress. Its clean interface allows you to add new tasks quickly, while smart prioritization helps you focus on what matters most. SmPlan works like your personal productivity assistant, helping you manage time effectively and stay on top of your commitments.",
     "size": "124MB",
     "reviews": 14200,
     "ratingAvg": 4.8,
@@ -346,7 +348,7 @@
     "image": "https://i.ibb.co.com/5hvWPwLP/unnamed-10.webp",
     "title": "FocusHero – AI Coach",
     "companyName": "SmartCore AI",
-    "description": "AI coach that monitors your screen time and gives motivational nudges.",
+    "description": "AI coach that monitors your screen time and gives motivational nudges.SmPlan is a smart task management app designed to organize and track your daily work efficiently. It includes AI-powered reminders and voice input features, making planning effortless. You can create to-do lists, schedule meetings, and set personal goals with timely notifications. The app also syncs data to the cloud, ensuring you never lose your progress. Its clean interface allows you to add new tasks quickly, while smart prioritization helps you focus on what matters most. SmPlan works like your personal productivity assistant, helping you manage time effectively and stay on top of your commitments.",
     "size": "64MB",
     "reviews": 13400,
     "ratingAvg": 4.7,
